template movies blur.tv last-v

--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
             <ul class="listAside">
                 <li class="listItem"><i class="fa-light fa-house fa-lg mr-4"></i> <a href="index.html">Home</a></li>
                 <li class="listItem"><i class="fa-regular fa-chart-line-up fa-lg mr-4"></i> <a href="index.html">News</a></li>
-                <li id="btn-series" class="listItem btnAction">
-                <i class="fa-light fa-clapperboard-play fa-lg mr-4"></i> <a href="#">Series</a> <i class="fa-light fa-chevron-down fa-2xs"></i>
-                    <ul>
-                        <li class="dropSeries"><a href="Seaction.html">English Series</a></li>
-                        <li class="dropSeries"><a href="Seaction.html">Arabic Series</a></li>
-                        <li class="dropSeries"><a href="Seaction.html">asia Series</a></li>
-                        <li class="dropSeries"><a href="Seaction.html">Indian Series</a></li>
-                        <li class="dropSeries"><a href="Seaction.html">Turkish Series</a></li>
-                        <li class="dropSeries"><a href="Seaction.html">Anime Series</a></li>
-                    </ul>
-                </li>
+                    <li id="btn-series" class="listItem btnAction">
+                    <i class="fa-light fa-clapperboard-play fa-lg mr-4"></i> <a href="#">Series</a> <i class="fa-light fa-chevron-down fa-2xs"></i>
+                        <ul>
+                            <li class="dropSeries"><a href="Seaction.html">English Series</a></li>
+                            <li class="dropSeries"><a href="Seaction.html">Arabic Series</a></li>
+                            <li class="dropSeries"><a href="Seaction.html">asia Series</a></li>
+                            <li class="dropSeries"><a href="Seaction.html">Indian Series</a></li>
+                            <li class="dropSeries"><a href="Seaction.html">Turkish Series</a></li>
+                            <li class="dropSeries"><a href="Seaction.html">Anime Series</a></li>
+                        </ul>
+                    </li>
                 <li id="btn-movies" class="listItem">
                     <i class="fa-light fa-popcorn fa-lg mr-4"></i> <a href="#"><button>Movies</button></a> <i class="fa-light fa-chevron-down fa-2xs"></i>
                     <ul>
@@ -101,15 +101,29 @@
                         <li class="dropMovie"><a href="Seaction.html">Anime movies</a></li>
                     </ul>
                 </li>
-                <li class="listItem"><i class="fa-light fa-screwdriver-wrench fa-lg mr-4"></i></i> <a href="admin/dashboard.html">Admin</a></li>
-                <li class="listItem"><i class="fa-light fa-user fa-lg mr-4"></i> <a href="profile.html">Profile</a></li>
-                <li class="listItem"><i class="fa-light fa-file-signature fa-lg mr-4"></i> <a href="contacts.html">Contacts</a></li>
-                <li class="listItem"><i class="fa-light fa-siren-on fa-lg mr-4"></i> <a href="privacy-policy.html">Privacy policy</a></li>
-                <li class="listItem"><i class="fa-light fa-circle-exclamation fa-lg mr-4"></i> <a href="about.html">About-Us</a></li>
-                <li class="listItem"><i class="fa-light fa-coins fa-lg mr-4"></i><a href="payment.html"> Pricing plans</a></li>
+                <li class="listItem"><i class="fa-light fa-screwdriver-wrench fa-lg mr-4"></i> 
+                    <a href="admin/dashboard.html">Admin</a>
+                </li>
+                <li class="listItem"><i class="fa-light fa-user fa-lg mr-4"></i>
+                     <a href="profile.html">Profile</a>
+                </li>
+                <li class="listItem"><i class="fa-light fa-file-signature fa-lg mr-4"></i> 
+                    <a href="contacts.html">Contacts</a>
+                </li>
+                <li class="listItem"><i class="fa-light fa-siren-on fa-lg mr-4"></i>
+                     <a href="privacy-policy.html">Privacy policy</a>
+                </li>
+                <li class="listItem"><i class="fa-light fa-circle-exclamation fa-lg mr-4"></i> 
+                    <a href="about.html">About-Us</a>
+                </li>
+                <li class="listItem"><i class="fa-light fa-coins fa-lg mr-4"></i>
+                    <a href="payment.html"> Pricing plans</a>
+                </li>
                 
                 
-                <li class="listItem"><i class="fa-light fa-right-from-bracket fa-lg mr-4"></i> <a href="profile.html"> Log in / Log out </a></li>
+                <li class="listItem"><i class="fa-light fa-right-from-bracket fa-lg mr-4">
+                </i> <a href="profile.html"> Log in / Log out </a>
+                </li>
             </ul>
         </div>
     </aside>
@@ -122,7 +136,7 @@
                 <form>
                     <button class="close"><i class="fa-regular fa-magnifying-glass fa-lg"></i></button>
                     <input type="search" placeholder="Find your movie here" >
-                    <button class="close"><i class="fa-solid fa-regular fa-xmark fa-lg"></i></button>
+                    <a href="#" class="close"><i class="fa-solid fa-regular fa-xmark fa-lg"></i></a>
                 </form>
             </div>
             <div class="w-100 h-100">
@@ -164,6 +178,8 @@
                         <div class="dropdownList">
                             <a href="admin/dashboard.html">Admin</a>
                             <a href="profile.html">Profile</a>
+                            <a href="item-details.html">Item Details</a>
+                            <a href="show-Room.html">Show Room</a>
                             <a href="contacts.html">Contacts</a>
                             <a href="privacy-policy.html">Privacy policy</a>
                             <a href="about.html">About-Us</a>
@@ -259,7 +275,7 @@
             </div>
 
             <div class="stop Information-Head toggle-hidden">
-                <span>Fast Details</span>
+                <span>Alice Through the Looking</span>
                 <button class="closedisplay">
                     <i class='fa-regular fa-xmark fa-xl text-light'></i>
                 </button>
