--- a/Item-Details.html
+++ b/Item-Details.html
@@ -119,7 +119,7 @@
                 <form>
                     <button class="close"><i class="fa-regular fa-magnifying-glass fa-lg"></i></button>
                     <input type="search" placeholder="Find your movie here" >
-                    <button class="close"><i class="fa-solid fa-regular fa-xmark fa-lg"></i></button>
+                    <a href="#" class="close"><i class="fa-solid fa-regular fa-xmark fa-lg"></i></a>
                 </form>
             </div>
             <div class="w-100 h-100">
@@ -132,7 +132,7 @@
             <!-- tools nsv -->
             <div class="d-md-none d-lg-inline-block toolsNav">
                 <ul class="item-nav d-none d-md-flex">
-                    <li><a class="activeNavBar hvr" href="index.html">Home</a></li>
+                    <li><a class=" hvr" href="index.html">Home</a></li>
                     <li><a class="hvr" href="index.html">News</a></li>
                     <li class="position-relative">
                         <a class=" hvr" href="#">Movies</a> <i class="fa-light fa-chevron-down fa-xs"></i>
@@ -157,10 +157,12 @@
                         </div>
                     </li>
                     <li class="position-relative">
-                        <a class="hvr" href="#">More</a> <i class="fa-light fa-chevron-down fa-xs"></i>
+                        <a class="activeNavBar hvr" href="#">More</a> <i class="fa-light fa-chevron-down fa-xs"></i>
                         <div class="dropdownList">
                             <a href="admin/dashboard.html">Admin</a>
                             <a href="profile.html">Profile</a>
+                            <a href="item-details.html">Item Details</a>
+                            <a href="show-Room.html">Show Room</a>
                             <a href="contacts.html">Contacts</a>
                             <a href="privacy-policy.html">Privacy policy</a>
                             <a href="about.html">About-Us</a>
