template movies blur.tv last-v

--- a/payment.html
+++ b/payment.html
@@ -424,7 +424,7 @@
             </div>
           </div>
 
-          <div class="d-inline-flex justify-content-between w-100">
+          <div class="boxButton d-inline-flex justify-content-between w-100">
             <!-- btn submit -->
             <button class="card-form__button mr-2">
               Submit
