--- a/index.html
+++ b/index.html
@@ -225,26 +225,9 @@
 		<div id="drag-on">
 			<div onmouseover="stop(this)" onmouseout="play(this)" id="spin-on">
 				<!-- <img class="hvr-head-img view" src="asstes/img/8.jpg"> -->
-				<img class="hvr-head-img view" src="asstes/img/111.jpg">
-				<img class="hvr-head-img view" src="asstes/img/111.jpg">
-				<img class="hvr-head-img view" src="asstes/img/111.jpg">
-				<img class="hvr-head-img view" src="asstes/img/111.jpg">
-				<img class="hvr-head-img view" src="asstes/img/111.jpg">
-				<img class="hvr-head-img view" src="asstes/img/111.jpg">
-				<img class="hvr-head-img view" src="asstes/img/111.jpg">
-				<img class="hvr-head-img view" src="asstes/img/111.jpg">
-				<img class="hvr-head-img view" src="asstes/img/111.jpg">
-				<img class="hvr-head-img view" src="asstes/img/111.jpg">
-				<img class="hvr-head-img view" src="asstes/img/111.jpg">
-				<img class="hvr-head-img view" src="asstes/img/111.jpg">
-				<img class="hvr-head-img view" src="asstes/img/111.jpg">
-				<img class="hvr-head-img view" src="asstes/img/111.jpg">
-				<img class="hvr-head-img view" src="asstes/img/111.jpg">
-				<img class="hvr-head-img view" src="asstes/img/111.jpg">
-				<img class="hvr-head-img view" src="asstes/img/111.jpg">
-				<img class="hvr-head-img view" src="asstes/img/111.jpg">
-				<!-- <img class="hvr-head-img view" src="asstes/img/2.jpg">
-				<img class="hvr-head-img view" src="asstes/img/3.png">
+				<!-- <img class="hvr-head-img view" src="asstes/img/1.jpg"> -->
+				<!-- <img class="hvr-head-img view" src="asstes/img/2.jpg"> -->
+				<!-- <img class="hvr-head-img view" src="asstes/img/3.png"> -->
 				<img class="hvr-head-img view" src="asstes/img/4.webp">
 				<img class="hvr-head-img view" src="asstes/img/5.jpg">
 				<img class="hvr-head-img view" src="asstes/img/6.jpg">
@@ -261,7 +244,7 @@
 				<img class="hvr-head-img view" src="asstes/img/17.jpg">
 				<img class="hvr-head-img view" src="asstes/img/3.png">
 				<img class="hvr-head-img view" src="asstes/img/5.jpg">
-				<img class="hvr-head-img view" src="asstes/img/2.jpg"> -->
+				<img class="hvr-head-img view" src="asstes/img/2.jpg">
 				<p id="demo" class="logo">
 					<!-- logo -->
                     <a href="./index.html" class="logo">Blur.<span>TV</span></a>
