--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 
 
     <!-- Loading -->
-    <div id="js-preloader" class="load">
+<!--     <div id="js-preloader" class="load">
         <div class="loader">
             <a class="logo animate__animated animate__hinge" href="#">Blur.<span class="">TV</span></a>
             <div class="inner one"></div>
             <div class="inner two"></div>
             <div class="inner three"></div>
         </div>
-    </div>
+    </div> -->
     <!-- End -->
 
     <!-- bubble Trailer -->
